k8s/omada/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omada 
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: omada
  template:
    metadata:
      name: omada
      labels:
        app: omada
    spec:
      containers:
      - name: omada
        image: mbentley/omada-controller:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8088
        - containerPort: 8043
        - containerPort: 8843
        - containerPort: 29810
        - containerPort: 29811
        - containerPort: 29812
        - containerPort: 29813
        volumeMounts:
        - mountPath: "/opt/tplink/EAPController/data"
          name: omada-config
      nodeSelector:
        storage: large
      volumes:
      - name: omada-config
        iscsi:
          targetPortal: 10.10.11.5:3260
          iqn: iqn.2000-01.com.synology:Library.omada-config
          lun: 1
          fsType: ext4
          readOnly: false
