k8s/omada/statefuleset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: omada 
spec:
  replicas: 1
  serviceName: omada
  selector:
    matchLabels:
      app: omada
  template:
    metadata:
      name: omada
      labels:
        app: omada
    spec:
      containers:
      - name: omada
        image: mbentley/omada-controller:5.15
        imagePullPolicy: Always
        ports:
        - name: manage-http
          containerPort: 8088
        - name: manage-https
          containerPort: 8043
        - name: portal-https
          containerPort: 8843
        - name: port-app-disc
          containerPort: 27001
          protocol: UDP
        - name: port-disc
          containerPort: 29810
          protocol: UDP
        - name: port-mngr-v1
          containerPort: 29811
        - name: port-adopt-v1
          containerPort: 29812
        - name: port-upg-v1
          containerPort: 29813
        - name: port-mngr-v2
          containerPort: 29814
        volumeMounts:
        - mountPath: "/opt/tplink/EAPController/data"
          name: omada-data
      volumes:
      - name: omada-data
        iscsi:
          targetPortal: 10.10.11.6:3260
          iqn: iqn.2024-10.ca.faircloth.nas:omada-data
          fsType: ext4
          readOnly: false
