k8s/omada/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: omada
spec:
  rules:
  - http:
      paths:
      - path: /omada
        backend:
          serviceName: omada
          servicePort: 8088
